k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: badminton-journey
  labels:
    name: badminton-journey
    app.kubernetes.io/name: badminton-journey
    app.kubernetes.io/version: "1.0.0"
